--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Landing page of Code Our Dreams",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "NODE_ENV=production webpack -p",
+    "start": "webpack-dev-server -d",
+    "build": "rm -rf ./dist && NODE_ENV=production webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -37,9 +37,17 @@
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.0.1",
+    "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.1.1",
+    "font-awesome": "^4.7.0",
+    "font-awesome-sass-loader": "^2.0.1",
+    "jquery": "^3.3.1",
+    "modernizr-webpack-plugin": "^1.0.7",
+    "popper.js": "^1.14.3"
+  }
 }
