--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-loader": "^2.1.5",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
+    "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
