--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Landing page of Code Our Dreams",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server -d",
-    "build": "rm -rf ./dist && NODE_ENV=production webpack -p",
+    "start": "webpack-dev-server",
+    "build": "rm -rf ./dist && NODE_ENV=production webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -38,6 +38,7 @@
     "pug-loader": "^2.4.0",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.1",
+    "ts-loader": "^4.3.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
