--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "www",
+  "name": "landing",
   "version": "1.0.0",
   "description": "Landing page of Code Our Dreams",
   "main": "index.js",
@@ -26,30 +26,18 @@
   },
   "homepage": "https://github.com/CodeOurDreams/www#readme",
   "devDependencies": {
-    "autoprefixer": "^8.5.0",
+    "autoprefixer": "^8.5.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.2.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
-    "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.1",
-    "ts-loader": "^4.3.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
+    "webpack": "^4.10.1",
+    "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
-  },
-  "dependencies": {
-    "bootstrap": "^4.1.1",
-    "font-awesome": "^4.7.0",
-    "font-awesome-sass-loader": "^2.0.1",
-    "jquery": "^3.3.1",
-    "modernizr-webpack-plugin": "^1.0.7",
-    "popper.js": "^1.14.3"
   }
 }
