--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "modernizr-webpack-plugin": "^1.0.7",
+    "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
