--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "rm -rf ./dist && NODE_ENV=production webpack",
+    "build": "npm run pristine && NODE_ENV=production webpack",
+    "clean": "rm -rf ./dist",
+    "pristine": "npm run clean && rm -rf ./node_modules && rm -rf ./package-lock.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -32,6 +34,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "modernizr-webpack-plugin": "^1.0.7",
+    "node-loader": "^0.6.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
     "pug": "^2.0.3",
@@ -41,5 +44,12 @@
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "font-awesome": "^4.7.0",
+    "font-awesome-sass-loader": "^2.0.1",
+    "jquery": "^3.3.1",
+    "jquery.scrollex": "^0.2.1",
+    "skel-framework-npm": "^1.0.1"
   }
 }
