--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Landing page of Code Our Dreams",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "npm run pristine && NODE_ENV=production webpack",
     "clean": "rm -rf ./dist",
+    "build": "npm run clean && NODE_ENV=production webpack",
+    "buildinstall": "npm run pristine && npm install && NODE_ENV=production webpack",
     "pristine": "npm run clean && rm -rf ./node_modules && rm -rf ./package-lock.json",
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
