--- a/package.json
+++ b/package.json
@@ -35,20 +35,22 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "modernizr-webpack-plugin": "^1.0.7",
-    "node-loader": "^0.6.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.0.1",
+    "svg-loader": "0.0.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0",
-    "font-awesome-sass-loader": "^2.0.1",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "jquery": "^3.3.1",
     "jquery.scrollex": "^0.2.1",
     "skel-framework-npm": "^1.0.1"
