--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.3.1",
     "mini-css-extract-plugin": "^0.4.0",
     "modernizr-webpack-plugin": "^1.0.7",
     "node-sass": "^4.9.0",
