--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "npm run clean && NODE_ENV=production webpack",
-    "buildinstall": "npm run pristine && npm install && NODE_ENV=production webpack",
+    "build": "npm run clean && production=true webpack",
+    "buildinstall": "npm run pristine && npm install && npm run build",
     "pristine": "npm run clean && rm -rf ./node_modules && rm -rf ./package-lock.json",
-    "start": "webpack-dev-server",
+    "start": "webpack-dashboard -- webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,13 +30,15 @@
   "homepage": "https://github.com/CodeOurDreams/www#readme",
   "devDependencies": {
     "autoprefixer": "^8.6.4",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.1",
     "mini-css-extract-plugin": "^0.4.0",
     "modernizr-webpack-plugin": "^1.0.7",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.3",
     "postcss-loader": "^2.1.5",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
@@ -45,6 +47,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.12.2",
     "webpack-cli": "^2.1.4",
+    "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
